--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,17 @@ body {
   background-color: var(--pisang);
 }
 
+.navbar .logo-title {
+  /* img logo
+  height: 24px;
+  padding: 0;
+  margin: 0;
+  width: auto; */
+  color: var(--pan);
+  font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+  /* font-family: Tesla; */
+}
+
 .home {
   width: 100vw;
   height: 85vh;
