--- a/src/App.css
+++ b/src/App.css
@@ -6,67 +6,13 @@
   --text-primary: #4d4b45;
   --pisang-biru: #4ea7ff;
   --pisang-merah: #ff4e4f;
-}
+  --gmail: #dd4b39;
+  --whatsapp: #25D366;
+  --facebook: #3b5998;
+  --twitter: #00aced;
+  --instagram: #d6249f;
+  --instagram: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
 
-body {
-  background-color: var(--bgc-primary);
-  color: var(--text-primary);
-}
-
-.navbar {
-  background-color: var(--pisang);
-}
-
-.navbar .logo-title {
-  /* img logo
-  height: 24px;
-  padding: 0;
-  margin: 0;
-  width: auto; */
-  color: var(--pan);
-  font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
-  /* font-family: Tesla; */
-}
-
-.home {
-  /* width: 100vw; */
-  /* if uncomment above, side scrolling appear */
-  height: 80vh;
-  display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  margin-top: 57px;
-}
-
-.home .logo {
-  max-width: 500px;
-  position: absolute;
-  z-index: -5;
-  opacity: 0.5;
-  transform: translate(40px, 200px) rotate(-20deg);
-}
-
-.home .title {
-  /* z-index: 5; */
-  text-align: left;
-  color: aliceblue;
-  text-shadow: 3px 3px grey;
-}
-
-.home .title .transparent {
-  color: transparent;
-  text-shadow: 3px 3px transparent;
-}
-
-.main-pages {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.main-pages .title {
-  text-align: center;
-  /* height: 10vh; */
-  /* padding: 14px 0; */
 }
 
 .in-construction {
@@ -84,13 +30,117 @@ body {
   font-size: 6em;
 }
 
+body {
+  background-color: var(--pisang);
+  color: var(--text-primary);
+}
+
+body .title {
+  text-align: center;
+}
+
+.navbar {
+  background-color: transparent;
+}
+
+.navbar .logo-title {
+  /* img logo
+  height: 24px;
+  padding: 0;
+  margin: 0;
+  width: auto; */
+  color: var(--pan);
+  font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+}
+
+.home {
+  height: 60vh;
+  display: flex;
+  margin-top: 107px;
+}
+
+/* .home .logo {
+  max-width: 500px;
+  position: absolute;
+  z-index: -5;
+  opacity: 0.5;
+  transform: translate(40px, 200px) rotate(-20deg);
+} */
+
+.home .title {
+  text-align: left;
+  color: aliceblue;
+  text-shadow: 3px 3px grey;
+}
+
+.home .title .transparent {
+  color: transparent;
+  text-shadow: 3px 3px transparent;
+}
+
+/* White Box */
+.white-box {
+  background: #f7f7f7;
+  border-radius: 15px;
+  padding: 24px;
+  margin: 24px 0;
+  box-shadow: 2px 2px 8px #aaa;
+}
+
 /* About Us */
-#about-us {
-  background-color: var(--pisang-biru);
-  color: azure;
+#about-us .white-box {
+  padding: 24px;
+}
+
+/* Projects */
+#projects {
+  text-align: center;
+}
+
+#projects i {
+  font-size: 5em;
+  color: #aaa;
+  margin: 24px;
 }
 
 /* Contact Us */
+#contact-us .btn-long {
+  width: 100%;
+  height: 60px;
+  margin: 15px 0;
+  padding: auto;
+  box-shadow: 3px 3px 5px #aaa;
+}
+
+#contact-us .btn-long:hover {
+  box-shadow: 15px 15px 20px #aaa;
+}
+
+#contact-us .whatsapp {
+  background-color: var(--whatsapp);
+  border: var(--whatsapp);
+}
+
+#contact-us .gmail {
+  background-color: var(--gmail);
+  border: var(--gmail);
+}
+
+#contact-us .facebook {
+  background-color: var(--facebook);
+  border: var(--facebook);
+}
+
+#contact-us .twitter {
+  background-color: var(--twitter);
+  border: var(--twitter);
+}
+
+#contact-us .instagram {
+  background: radial-gradient(to top right, #fdf497, #fd5949,#d6249f,#285AEB);
+  border: none;
+}
+
 #contact-us i {
   font-size: 1.3em;
 }
@@ -106,8 +156,7 @@ body {
 
 /* Services */
 #services {
-  background-color: var(--pisang-merah);
-  color: var(--bgc-primary);
+  text-align: center;
 }
 
 /* footer */
@@ -136,6 +185,25 @@ body {
 }
 
 @media (min-width: 992px) {
+  /* White Box */
+  .white-box {
+    background: #f7f7f7;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 30px;
+    box-shadow: 2px 2px 5px #ccc;
+  }
+
+  #about-us .white-box {
+    padding: 24px 50px;
+  }
+
+  #contact-us .btn-long {
+    width: 80%;
+    height: 60px;
+    margin: 20px 10%;
+    padding: auto;
+  }
 }
 
 /* @media only screen and (min-width: 992px) {
