--- a/src/App.css
+++ b/src/App.css
@@ -177,6 +177,11 @@ body .title {
   margin: 0 0 14px;
 }
 
+#services .card-img-top {
+  width: 100%;
+  height: 200px;
+}
+
 /* footer */
 .page-footer {
   background-color: var(--text-primary);
